*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -53,7 +53,7 @@ is still backward compatible, and will continue to accept non relative source at
 
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37111">37111</a>
-this = null; should raise compile time error
+classpath file - java source attachment shouldn't hardcode project name
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38143">38143</a>
 this = null; should raise compile time error
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38124">38124</a>
