--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -60,7 +60,9 @@ this = null; should raise compile time error
 Brackets around cast accepted by Eclipse but not javac
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38172">38172</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38345">38345</a>
+VerifyError, Inconsistent stack height with try/switch/if combination
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38172">38172</a>
 Non-deprecated classes in jar files are marked as deprecated
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38152">38152</a>
 Java Compiler Error with method visibility
