--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -41,7 +41,7 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 2nd June 2003 - 3.0 MILESTONE-1
+Eclipse SDK 3.0 Build - 3rd June 2003 - 3.0 MILESTONE-1
 <br>Project org.eclipse.jdt.core v_355
 <h2>
 What's new in this drop</h2>
