*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -60,7 +60,9 @@ this = null; should raise compile time error
 Brackets around cast accepted by Eclipse but not javac
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38235">38235</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38282">38282</a>
+Multiple Java Build Paths
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38235">38235</a>
 Variables should be allowed to contain other variables/lists
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38345">38345</a>
 VerifyError, Inconsistent stack height with try/switch/if combination
