--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -41,7 +41,26 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 3rd June 2003 - 3.0 MILESTONE-1
+Eclipse SDK 3.0 Build - 4th June 2003 - 3.0 MILESTONE-1
+<br>Project org.eclipse.jdt.core v_356
+<h2>
+What's new in this drop</h2>
+<ul>
+<li>Fix for bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37111">37111</a> may issue some outgoing changes
+to .classpath file since the source attachment will be shortened into a project relative path when applicable. The .classpath file
+is still backward compatible, and will continue to accept non relative source attachments as well. </li>
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37111">37111</a>
+Inconsistent output when using comparrisson operators
+
+<h3>Problem Reports Closed</h3>
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
+Eclipse SDK 3.0 Build - 3rd June 2003
 <br>Project org.eclipse.jdt.core v_355
 <h2>
 What's new in this drop</h2>
