--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -53,6 +53,8 @@ What's new in this drop</h2>
 Inconsistent output when using comparrisson operators
 
 <h3>Problem Reports Closed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37417">37417</a>
+faster method to clean output folder
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
