*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -41,7 +41,27 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 4th June 2003 - 3.0 MILESTONE-1
+Eclipse SDK 3.0 Build - 5th June 2003 - 3.0 MILESTONE-1
+<br>Project org.eclipse.jdt.core v_356
+<h2>
+What's new in this drop</h2>
+<ul>
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37274">37274</a>
+Deadlock on plugin import
+
+<h3>Problem Reports Closed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38398">38398</a>
+Deadlock importing binaries
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38398">38509</a>
+deadlock on importing plugins
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
+Eclipse SDK 3.0 Build - 4th June 2003
 <br>Project org.eclipse.jdt.core v_356
 <h2>
 What's new in this drop</h2>
