*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -41,6 +41,26 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
+Eclipse SDK 3.0 Build - ?th June 2003 
+<br>Project org.eclipse.jdt.core v_358
+<h2>
+What's new in this drop</h2>
+<ul>
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=20931">20931</a>
+Need an API to reload the classpath from the file
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38393">38393</a>
+bytecode generated for evaluation with parentheses is wrong
+
+
+<h3>Problem Reports Closed</h3>
+
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 5th June 2003 - 3.0 MILESTONE-1
 <br>Project org.eclipse.jdt.core v_357
 <h2>
@@ -58,10 +78,11 @@ Deadlock importing binaries
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38398">38509</a>
 deadlock on importing plugins
 
+
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 4th June 2003
+Eclipse SDK 3.0 Build - 4th June 2003 - 3.0 MILESTONE-1
 <br>Project org.eclipse.jdt.core v_356
 <h2>
 What's new in this drop</h2>
