--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -49,7 +49,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=20931">20931</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33530">33530</a>
+JavaModel synchronization model should be more optimistic 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=20931">20931</a>
 Need an API to reload the classpath from the file
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38393">38393</a>
 bytecode generated for evaluation with parentheses is wrong
