*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -58,7 +58,9 @@ bytecode generated for evaluation with parentheses is wrong
 
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38674">38674</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38607">38607</a>
+Refresh does not capture changes in jar files
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38674">38674</a>
 3.0 M1 - Preserve unused local variables doesn't seem to work
 
 <p><hr><h1>
