--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -214,7 +214,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37621">37621</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36854">36854</a>
+NPE opening type hierarchy 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37621">37621</a>
 java compiler creates class with internal inconsistency
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37646">37646</a>
 Help for JDTCompilerAdapter is dated
