*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -49,7 +49,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33530">33530</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36854">36854</a>
+NPE opening type hierarchy 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33530">33530</a>
 JavaModel synchronization model should be more optimistic 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=20931">20931</a>
 Need an API to reload the classpath from the file
@@ -58,7 +60,15 @@ bytecode generated for evaluation with parentheses is wrong
 
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38607">38607</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38688">38688</a>
+exception in the console window 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38163">38163</a>
+NPE while building type hierarchy 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37949">37949</a>
+NPE from SourceTypeConverter 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37804">37804</a>
+NPE when opening class 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38607">38607</a>
 Refresh does not capture changes in jar files
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38674">38674</a>
 3.0 M1 - Preserve unused local variables doesn't seem to work
@@ -214,9 +224,7 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36854">36854</a>
-NPE opening type hierarchy 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37621">37621</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37621">37621</a>
 java compiler creates class with internal inconsistency
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37646">37646</a>
 Help for JDTCompilerAdapter is dated
