*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -60,7 +60,9 @@ bytecode generated for evaluation with parentheses is wrong
 
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38688">38688</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38702">38702</a>
+Compiler generates illegal bytecode in switch statement. VerifyError.
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38688">38688</a>
 exception in the console window 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38163">38163</a>
 NPE while building type hierarchy 
