--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -481,6 +481,21 @@ detect hiding (non-private) fields
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=25838">25838</a>
 Warning when overriding field
 
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
+Eclipse SDK 2.1 Build (before 3.0/2.1.1 branching) - 31st March 2003
+<br>Project org.eclipse.jdt.core v_312
+<h2>
+What's new in this drop</h2>
+<ul>
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35831">35831</a>
+NPE navigating references using links
+
+<h3>Problem Reports Closed</h3>
 
 <p><hr>
 For earlier build notes, also see <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.jdt.core/notes/R21_buildnotes_jdt-core.html">build notes up to Release 2.1</a>.
