--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -60,7 +60,9 @@ bytecode generated for evaluation with parentheses is wrong
 
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37999">37999</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38766">38766</a>
+Would like the Compiler to ignore the serialVersionUID
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37999">37999</a>
 Illegal bytecode sequence
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38763">38763</a>
 Unexpected NLS problem
