--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -64,7 +64,9 @@ bytecode generated for evaluation with parentheses is wrong
 
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38766">38766</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36777">36777</a>
+refreshing a library results in jzentry==0 failure message 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38766">38766</a>
 Would like the Compiler to ignore the serialVersionUID
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38763">38763</a>
 Unexpected NLS problem
