*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -90,7 +90,9 @@ bytecode generated for evaluation with parentheses is wrong
 
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36777">36777</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=7294">7294</a>
+StackOverflowException during IType.getFields()
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36777">36777</a>
 refreshing a library results in jzentry==0 failure message 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38766">38766</a>
 Would like the Compiler to ignore the serialVersionUID
@@ -464,7 +466,9 @@ CastExpression resolution departs from JLS section 6.5.1
 [DOM/AST] Incorrect grammar rule in TypeDeclaration
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36709">36709</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=21304">21304</a>
+Have option for compiler warning on redeclaration of instance/class variables as local variables
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36709">36709</a>
 absent line numbers msg when debugging
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36620">36620</a>
 NPE Searching for workspace references
