--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -75,7 +75,9 @@ before next automatic update occurs.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38732">38732</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38424">38424</a>
+Mistake on Web site
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38732">38732</a>
 organize imports does not work with assert in source code
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38447">38447</a>
 AST: Source ranges with missing bracket
