--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -46,6 +46,16 @@ Eclipse SDK 3.0 Build - ?th June 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li><code>JavaCore.newLibraryEntry(...)</li> will now allow an empty source attachment (new Path("")) to
+be equivalent to no source attachment (i.e. <code>null</null>). This adjustment is made necessary for
+library entries generated from classpath variables which cannot be set to <code>null</code>. Also see 
+bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38531">38531</a>.
+<pre>
+* @param sourceAttachmentPath the absolute path of the corresponding source archive or folder, 
+*    or <code>null</code> if none. Note, since 3.0, an empty path is allowed to denote no source attachment.
+*   and will be automatically converted to <code>null</code>.
+</pre>
+</li>
 <li>Added API <code>IJavaProject#forceClasspathReload(IProgressMonitor)</code> to force reload of <code>.classpath</code> file
 before next automatic update occurs.
 <pre>
@@ -75,7 +85,9 @@ before next automatic update occurs.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38424">38424</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38531">38531</a>
+IllegalArgumentException "Source attachment path should be absolute"
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38424">38424</a>
 Mistake on Web site
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38732">38732</a>
 organize imports does not work with assert in source code
