--- a/notes/API_changes.html
+++ b/notes/API_changes.html
@@ -21,7 +21,7 @@
   <tr>
   	<td>
 	  <font face="Arial, Helvetica, sans-serif" size="-1">
-	  This document lists the breaking API changes that occured between R2.1 and R3.0 and how to migrate from the R2.1 API to
+	  This document lists all API changes (breaking or not) that occured between R2.1 and R3.0 and how to migrate from the R2.1 API to
 	  the R3.0 API.
 	  </font>
 	</td>
@@ -126,6 +126,17 @@ before next automatic update occurs.
 </pre>
 </li>
 
+<li>2003/06/13 (->M2)
+<code>JavaCore.newLibraryEntry(...)</li> will now allow an empty source attachment (new Path("")) to
+be equivalent to no source attachment (i.e. <code>null</null>). This adjustment is made necessary for
+library entries generated from classpath variables which cannot be set to <code>null</code>. Also see 
+bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38531">38531</a>.
+<pre>
+* @param sourceAttachmentPath the absolute path of the corresponding source archive or folder, 
+*    or <code>null</code> if none. Note, since 3.0, an empty path is allowed to denote no source attachment.
+*   and will be automatically converted to <code>null</code>.
+</pre>
+</li>
 </ul>
 </body>
 </html>
