*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -46,8 +46,8 @@ Eclipse SDK 3.0 Build - ?th June 2003
 <h2>
 What's new in this drop</h2>
 <ul>
-<li><code>JavaCore.newLibraryEntry(...)</li> will now allow an empty source attachment (new Path("")) to
-be equivalent to no source attachment (i.e. <code>null</null>). This adjustment is made necessary for
+<li><code>JavaCore.newLibraryEntry(...)</code> will now allow an empty source attachment (<code>new Path("")</code>) to
+be equivalent to no source attachment (i.e. <code>null</code>). This adjustment is made necessary for
 library entries generated from classpath variables which cannot be set to <code>null</code>. Also see 
 bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38531">38531</a>.
 <pre>
