--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -85,7 +85,9 @@ before next automatic update occurs.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38531">38531</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38908">38908</a>
+Ant script reports that the bootclasspath cannot be infer
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38531">38531</a>
 IllegalArgumentException "Source attachment path should be absolute"
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38424">38424</a>
 Mistake on Web site
