Update UML and replace jpg with smaller gif

--- a/src/share/org/apache/struts/taglib/nested/bean/package.html
+++ b/src/share/org/apache/struts/taglib/nested/bean/package.html
@@ -10,7 +10,7 @@
 except in that all references to  beans and  bean properties will be managed 
 in a nested context. <br>
  <br>
- <img src="doc-files/nested-bean.jpg" alt="Nested bean taglib">
+ <img src="doc-files/nested-bean.gif" alt="Nested bean taglib">
  <br>
  <br /="">
  <br>
