Update UML and replace jpg with smaller gif

--- a/src/share/org/apache/struts/taglib/nested/html/package.html
+++ b/src/share/org/apache/struts/taglib/nested/html/package.html
@@ -10,7 +10,7 @@
 logic of   the html tags don't change, except in that all references to beans
 and  bean properties will be managed in a nested context. <br>
 <br>
-<img src="doc-files/nested-html.jpg" alt="Nested html taglib">
+<img src="doc-files/nested-html.gif" alt="Nested html taglib">
 <br>
 <br /="">
 <br>
