Update UML and replace jpg with smaller gif

--- a/src/share/org/apache/struts/taglib/nested/logic/package.html
+++ b/src/share/org/apache/struts/taglib/nested/logic/package.html
@@ -11,7 +11,7 @@ Package</title>
  logic of   the logic tags don't change, except in that all references to 
 beans and  bean properties will be managed in a nested context. <br>
 <br>
-<img src="doc-files/nested-logic.jpg" alt="Nested logic taglib">
+<img src="doc-files/nested-logic.gif" alt="Nested logic taglib">
 <br>
 <br /="">
 <br>
