--- a/src/share/org/apache/struts/taglib/tiles/package.html
+++ b/src/share/org/apache/struts/taglib/tiles/package.html
@@ -6,8 +6,8 @@
  <body bgcolor="white">
    
 
-<p>     The "struts-ttiles" tag library contains tags that are useful in
-creating dynamic  reusable components. </p>
+<p>     The "struts-tiles" tag library contains tags that are useful in
+creating dynamic reusable components. </p>
 <img src="doc-files/tilesUML.gif" alt="TagLib Tiles UML">
      </body>
 </html>
