*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -270,7 +270,9 @@ public abstract class WorkingCopyOwner {
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38908">38908</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38901">38901</a>
+IndexManager hangs in end-less loop
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38908">38908</a>
 Ant script reports that the bootclasspath cannot be infer
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38531">38531</a>
 IllegalArgumentException "Source attachment path should be absolute"
