--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -293,7 +293,9 @@ bytecode generated for evaluation with parentheses is wrong
 
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38873">38873</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38977">38977</a>
+Deadlock on index manager while shutting down target eclipse
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38873">38873</a>
 Compilation Units which aren't any.
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=7294">7294</a>
 StackOverflowException during IType.getFields()
