--- a/www/history.html
+++ b/www/history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<!-- $Id: history.html,v 1.5 2003/03/15 18:35:28 linus Exp $ -->
+<!-- $Id: history.html,v 1.6 2003/06/17 05:21:49 linus Exp $ -->
 <HTML>
 <HEAD>
 	<META HTTP-EQUIV="Content-Type" CONTENT="text/html;CHARSET=iso-8859-1">
@@ -355,7 +355,7 @@ ArgoUML 0.12 was released.
 </TD>
 <TD>
 ArgoUML is featured in the book "Java Software Engineering unter 
-Linux" (german) by Oliver B&ouml;<hm (SuSE Press)
+Linux" (german) by Oliver B&ouml;hm (SuSE Press)
 </TD>
 </TR>
 
