*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -57,6 +57,8 @@ RC2 Compiler produces bogus error messages
 SyntaxError- unoptimal syntax error message
 
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39005">39005</a>
+Should avoid reindexing entire project when reopened (rsc)
 
 
 <p><hr><h1>
