*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -56,7 +56,7 @@ RC2 Compiler produces bogus error messages
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38838">38838</a>
 SyntaxError- unoptimal syntax error message
 
-<h3>Problem Reports Fixed</h3>
+<h3>Problem Reports Closed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39005">39005</a>
 Should avoid reindexing entire project when reopened (rsc)
 
