--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -49,7 +49,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35877">35877</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38951">38951</a>
+NPE in editor while saving contents 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35877">35877</a>
 Stack overflow in code assist
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35409">35409</a>
 RC2 Compiler produces bogus error messages
