*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -59,7 +59,9 @@ RC2 Compiler produces bogus error messages
 SyntaxError- unoptimal syntax error message
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39020">39020</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36066">36066</a>
+Outliner did not refresh after field rename 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39020">39020</a>
 Class causes java.lang.VerifyError: Illegal target of jump or branch
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39005">39005</a>
 Should avoid reindexing entire project when reopened (rsc)
