*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -78,6 +78,11 @@ Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 16th June 2003 
 <br>Project org.eclipse.jdt.core v_358
+
+<p><b>NOTE:</b> This version got backed out due to severe regression
+(see <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38951">38951</a> NPE in editor while saving contents).
+Until subsequent version got released (see above), integration builds did revert to version v_357.
+
 <h2>
 What's new in this drop</h2>
 <ul>
