--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -81,7 +81,7 @@ Eclipse SDK 3.0 Build - 16th June 2003
 
 <p><b>NOTE:</b> This version got backed out due to severe regression
 (see <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38951">38951</a> NPE in editor while saving contents).
-Until subsequent version got released (see above), integration builds did revert to version v_357.
+Until subsequent version is made available (see above), integration builds will revert to previous version (v_357).
 
 <h2>
 What's new in this drop</h2>
