*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -65,7 +65,9 @@ RC2 Compiler produces bogus error messages
 SyntaxError- unoptimal syntax error message
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38969">38969</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=13765">13765</a>
+Compiler uses reflect for errors - won't work on CLDC
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38969">38969</a>
 NPE on saving editor 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39019">39019</a>
 NPE saving file
