*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -41,6 +41,46 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
+Eclipse SDK 3.0 Build - ?th June 2003 
+<br>Project org.eclipse.jdt.core v_359
+<h2>
+What's new in this drop</h2>
+<ul>
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37006">37006</a>
+2 tasks in the tasks view instead of one
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38759">38759</a>
+Task Tags: should not consider text in substrings/parts of text
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36066">36066</a>
+Outliner did not refresh after field rename 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38951">38951</a>
+NPE in editor while saving contents 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35877">35877</a>
+Stack overflow in code assist
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35409">35409</a>
+RC2 Compiler produces bogus error messages
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38838">38838</a>
+SyntaxError- unoptimal syntax error message
+
+<h3>Problem Reports Closed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=13765">13765</a>
+Compiler uses reflect for errors - won't work on CLDC
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38969">38969</a>
+NPE on saving editor 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39019">39019</a>
+NPE saving file
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35348">35348</a>
+Contiguous Todo tasks aren't colored properly
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39020">39020</a>
+Class causes java.lang.VerifyError: Illegal target of jump or branch
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39005">39005</a>
+Should avoid reindexing entire project when reopened (rsc)
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 18th June 2003 
 <br>Project org.eclipse.jdt.core v_357b
 <h2>
