--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -49,7 +49,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37006">37006</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38678">38678</a>
+workspace did not shutdown
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37006">37006</a>
 2 tasks in the tasks view instead of one
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38759">38759</a>
 Task Tags: should not consider text in substrings/parts of text
