--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -46,6 +46,20 @@ Eclipse SDK 3.0 Build - ?th June 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li>Added API on <code>ICompilationUnit</code> to get the original compilation unit of a working copy 
+	 (it replaces <code>IWorkingCopy.getOriginalElement()</code>):
+<pre>
+/**
+ * Returns the original compilation unit (whose owner is the primary owner)
+ * this working copy was created from, or <code>null</code> if this is not a working copy.
+ * 
+ * @return the original compilation unit this working copy was created from,
+ * or <code>null</code> if this is not a working copy
+ * @since 3.0
+ */
+ICompilationUnit getOriginal();
+</pre>
+</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
