*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -51,13 +51,12 @@ What's new in this drop</h2>
 <pre>
 /**
  * Returns the original compilation unit (whose owner is the primary owner)
- * this working copy was created from, or <code>null</code> if this is not a working copy.
+ * this working copy was created from, or this compilation unit if this is not a working copy.
  * 
  * @return the original compilation unit this working copy was created from,
- * or <code>null</code> if this is not a working copy
+ * or this compilation unit if this is not a working copy
  * @since 3.0
  */
-ICompilationUnit getOriginal();
 </pre>
 </li>
 </ul>
